Work around missing default button

Task-number: QTBUG-39334
Change-Id: Ib72e15f51dc86bea4f457375746d3438291eb679
Reviewed-by: Eike Ziller <eike.ziller@digia.com>